# RTXGI-DDGI

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  FindSDKs.cmake  README.md  update_dependencies.bat  update_dependencies.sh
docs/: .buildinfo  Algorithms.md  DDGIVolume.md  Integration.md  Math.md  QuickStart.md  ShaderAPI.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/manual/: BestPractices.rst.txt  Changelog.rst.txt  DDGI.rst.txt  FAQ.rst.txt  Harness.rst.txt  Index.rst.txt  License.rst.txt  QuickStart.rst.txt  SDKOverview.rst.txt  UE4Plugin.rst.txt  Welcome.rst.txt
docs/_static/css/: nvidia_theme.css  theme.css
docs/_static/images/: RTXGILogo.psd  sdk-design-ue4.vsdx  sdk-design.vsdx
docs/manual/: BestPractices.html  Changelog.html  DDGI.html  FAQ.html  Harness.html  Index.html  License.html  QuickStart.html  SDKOverview.html  UE4Plugin.html  Welcome.html
include/rtxgi/: Common.h  Defines.h  Types.h
include/rtxgi/ddgi/: DDGIRootConstants.h  DDGIVolumeDescGPU.h
packman/: config.packman.xml  dependencies.xml  packman
packman/bootstrap/: configure.bat
rtxgi-sdk/: CMakeLists.txt  FindSDKs.cmake
rtxgi-sdk/include/rtxgi/: Common.h  Defines.h  Math.h  Random.h  Types.h  VulkanExtensions.h
rtxgi-sdk/include/rtxgi/ddgi/: DDGIConstants.h  DDGIRootConstants.h  DDGIVolume.h  DDGIVolumeDefines.h  DDGIVolumeDescGPU.h
rtxgi-sdk/include/rtxgi/ddgi/gfx/: DDGIVolume_D3D12.h  DDGIVolume_VK.h
rtxgi-sdk/lib/: WinPixEventRuntime.lib
rtxgi-sdk/shaders/: Common.hlsl  Platform.hlsl
rtxgi-sdk/shaders/ddgi/: Irradiance.hlsl  ProbeBlendingCS.hlsl  ProbeBorderUpdateCS.hlsl  ProbeClassificationCS.hlsl  ProbeCommon.hlsl  ProbeRelocationCS.hlsl  ProbeStateClassifierCS.hlsl
rtxgi-sdk/shaders/ddgi/include/: Common.hlsl  ProbeCommon.hlsl  ProbeDataCommon.hlsl  ProbeIndexing.hlsl  ProbeOctahedral.hlsl  ProbeRayCommon.hlsl
rtxgi-sdk/shaders/ddgi/include/validation/: ProbeBlendingDefines.hlsl  ProbeClassificationDefines.hlsl  ProbeRelocationDefines.hlsl
rtxgi-sdk/src/: Math.cpp  Random.cpp  VulkanExtensions.cpp
rtxgi-sdk/src/ddgi/: DDGIVolume.cpp
rtxgi-sdk/src/ddgi/gfx/: DDGIVolume_D3D12.cpp  DDGIVolume_VK.cpp
samples/: .gitignore  CMakeLists.txt  runTestHarness.bat
samples/test-harness/: .args  CMakeLists.txt  Test-Harness-D3D12.nsight-gfxproj  Test-Harness-Vulkan.nsight-gfxproj  Test-Harness.nsight-gfxproj
samples/test-harness/config/: cornell.ini  furnace.ini  multi-cornell.ini  sponza.ini  tunnel.ini  two-rooms.ini
samples/test-harness/data/gltf/cornell/: cornell.glb
samples/test-harness/data/gltf/furnace/: furnace.glb
samples/test-harness/data/gltf/multi-cornell/: multi-cornell.glb
samples/test-harness/data/gltf/sponza/: README.md
samples/test-harness/data/gltf/tunnel/: tunnel.glb
samples/test-harness/data/gltf/two-rooms/: two-rooms.glb
samples/test-harness/include/: Benchmark.h  Caches.h  Common.h  Config.h  Configs.h  Deserialize.h  Direct3D12.h  GLTF.h  Geometry.h  Graphics.h  Harness.h  ImageCapture.h  Input.h  Inputs.h  Instrumentation.h  Lights.h  Scene.h  Scenes.h  Shaders.h  Textures.h  UI.h  Visualization.h  Vulkan.h  VulkanExtensions.h  Window.h
samples/test-harness/include/graphics/: Composite.h  Composite_D3D12.h  Composite_VK.h  DDGI.h  DDGIDefines.h  DDGIShaderConfig.h  DDGIVisualizations.h  DDGIVisualizations_D3D12.h  DDGIVisualizations_VK.h  DDGI_D3D12.h  DDGI_VK.h  GBuffer.h  GBuffer_D3D12.h  GBuffer_VK.h  PathTracing.h  PathTracing_D3D12.h  PathTracing_VK.h  RTAO.h  RTAO_D3D12.h  RTAO_VK.h  Types.h  UI.h  UI_D3D12.h  UI_VK.h
samples/test-harness/shaders/: AHS.hlsl  AOFilterCS.hlsl  AOTraceRGS.hlsl  CHS.hlsl  ClosestHit.hlsl  Composite.hlsl  GBufferRGS.hlsl  Indirect.hlsl  IndirectCS.hlsl  LightingCommon.hlsl  Miss.hlsl  PathTraceRGS.hlsl  PrimaryTraceRGS.hlsl  ProbeTraceRGS.hlsl  RTAOFilterCS.hlsl  RTAOTraceRGS.hlsl  VisDDGIBuffers.hlsl  VisDDGIProbes.hlsl  VisUpdateTLASCS.hlsl
samples/test-harness/shaders/ddgi/: ProbeTraceRGS.hlsl
samples/test-harness/shaders/ddgi/visualizations/: Descriptors.hlsl  ProbeBuffers.hlsl  ProbesCHS.hlsl  ProbesMiss.hlsl  ProbesRGS.hlsl  ProbesUpdateCS.hlsl  VolumeTexturesCS.hlsl
samples/test-harness/shaders/include/: Common.hlsl  ComputeRS.hlsl  Descriptors.hlsl  Lighting.hlsl  LightingCommon.hlsl  Platform.hlsl  RSCommon.hlsl  RTCommon.hlsl  RTGlobalRS.hlsl  RTLocalRS.hlsl  Random.hlsl  RasterRS.hlsl  RayTracing.hlsl
samples/test-harness/src/: Benchmark.cpp  Caches.cpp  Config.cpp  Configs.cpp  D3D12.cpp  DXR.cpp  Direct3D12.cpp  GLTF.cpp  Geometry.cpp  Harness.cpp  ImageCapture.cpp  Input.cpp  Inputs.cpp  Instrumentation.cpp  Scene.cpp  Scenes.cpp  Shaders.cpp  Textures.cpp  UI.cpp  Visualization.cpp  Vulkan.cpp  VulkanExtensions.cpp  Window.cpp  main.cpp
samples/test-harness/src/common/: D3D12.cpp  DXR.cpp  Shaders.cpp
samples/test-harness/src/graphics/: Composite_D3D12.cpp  Composite_VK.cpp  DDGI.cpp  DDGIVisualizations_D3D12.cpp  DDGIVisualizations_VK.cpp  DDGI_D3D12.cpp  DDGI_VK.cpp  GBuffer_D3D12.cpp  GBuffer_VK.cpp  PathTracing_D3D12.cpp  PathTracing_VK.cpp  RTAO_D3D12.cpp  RTAO_VK.cpp  UI_D3D12.cpp  UI_VK.cpp
samples/test-harness/src/harness/: Config.cpp  Deserialize.cpp  Geometry.cpp  Harness.cpp  Input.cpp  Textures.cpp  UI.cpp  Visualization.cpp  Window.cpp  main.cpp
shaders/: Common.hlsl
shaders/ddgi/: Irradiance.hlsl  ProbeBlendingCS.hlsl  ProbeClassificationCS.hlsl  ProbeRelocationCS.hlsl  ReductionCS.hlsl
shaders/ddgi/include/: Common.hlsl  DDGIRootConstants.hlsl  ProbeCommon.hlsl  (+2 more)
src/: VulkanExtensions.cpp
src/ddgi/: DDGIVolume.cpp
ue4-plugin/: ChangeLog.md  RTXGI-NvRTX4.25.3.patch  RTXGI-NvRTX4.25.4.patch  RTXGI-NvRTX4.26.0.patch  RTXGI-NvRTX4.26.1.patch  RTXGI-UE4.25.3.patch  RTXGI-UE4.25.4.patch  RTXGI-UE4.26.0.patch  RTXGI-UE4.26.1.patch  RTXGI-UE4.26.2.patch
ue4-plugin/4.25/: RTXGI-NvRTX4.25.3.patch  RTXGI-NvRTX4.25.4.patch  RTXGI-UE4.25.4.patch
ue4-plugin/4.26/: RTXGI-UE4.26.0.patch  RTXGI-UE4.26.2.patch
ue4-plugin/September 2020/: RTXGI-UE4.25.3.patch
(+42 files in other folders)
